[tool.poetry]
name = "torchbeast"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
torch = "^1.13.1"
tensorboard = "^2.5.0"
wandb = "^0.12.1"
pyglet = "^1.5.19"
opencv-python = "^4.5.3"
ale-py = {version = "^0.7", optional = true}
AutoROM = {version = "^0.4.2", optional = true, extras = ["accept-rom-license"]}
gym = "0.23.1"
envpool = "0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
atari = ["ale-py", "AutoROM", "stable-baselines3"]